# singleton-attr

./: Cargo.toml  LICENSE  README.md
crates/singleton-attr/: Cargo.toml  README.md
crates/singleton-attr-proc-macro/: Cargo.toml  README.md
crates/singleton-attr-proc-macro/src/: lib.rs
crates/singleton-attr/examples/: 01_basic.rs  02_threads.rs  03_safe_threads.rs  04_derive_basic.rs  04_manual.rs  05_derive_threads.rs  06_derive_safe_threads.rs  07_manual.rs  example.rs
crates/singleton-attr/src/: lib.rs  manual.rs  traits.rs
