[workspace]
resolver = "2"
members = ["crates/singleton-attr", "crates/singleton-attr-proc-macro"]

[workspace.package]
version = "0.1.9"
authors = ["Dimitriy \"ay0ks\" <ay0o0ks000@gmail.com>"]
license = "MIT"
repository = "https://github.com/ay0ks/singleton-attr"
readme = "README.md"
edition = "2021"
