[package]
name = "singleton-attr-proc-macro"
version.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8"
