[package]
name = "singleton-attr-proc-macro"
description = "Simple to use singleton procedural attribute (internal implementation)"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
rand = "0.8"
