[package]
name = "singleton-attr"
description = "Simple to use singleton procedural attribute"
readme.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
singleton-attr-proc-macro = "0.1.3"

[dev-dependencies]
singleton-attr = "0.1.3"
rand = "0.8"

[[example]]
name = "01_basic"

[[example]]
name = "02_threads"

[[example]]
name = "03_safe_threads"
