[package]
name = "singleton-attr"
description = "Simple to use singleton procedural attribute and derive macro"
readme.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
singleton-attr-proc-macro = "0.1.4"
paste = "1.0"

[dev-dependencies]
rand = "0.8"

[[example]]
name = "01_basic"

[[example]]
name = "02_threads"

[[example]]
name = "03_safe_threads"

[[example]]
name = "04_derive_basic"

[[example]]
name = "05_derive_threads"

[[example]]
name = "06_derive_safe_threads"

[[example]]
name = "07_manual"
