[package]
name = "singleton-attr"
description = "Simple to use singleton procedural attribute and derive macro"
readme.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
singleton-attr-proc-macro = "0.1.7"

[[example]]
name = "01_basic"

[[example]]
name = "02_threads"

[[example]]
name = "03_safe_threads"

[[example]]
name = "04_manual"
